# sysdig

driver/: CMakeLists.txt
userspace/libsinsp/: container.cpp  container_info.h  filterchecks.cpp  parsers.cpp  threadinfo.cpp  threadinfo.h
userspace/libsinsp/container_engine/: docker_common.cpp
